Fix near-invisible font issue on admin page

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -86,6 +86,10 @@ body {
 	&.no{
 		background: url('../images/bright.png')no-repeat center center fixed; 
 	}
+
+	.admin-panel{
+		color: #333;
+	}
 }
 
 h2{
